Update readme and generators to match new workers and listeners without the suffix

--- a/lib/generators/messenger/listener/templates/listener.rb.erb
+++ b/lib/generators/messenger/listener/templates/listener.rb.erb
@@ -1,6 +1,6 @@
 class Messenger
   module Listeners
-    class <%= class_name %>Listener
+    class <%= class_name %>
       include Messenger::Listeners
 
       attr_accessor :listening
