--- a/lib/generators/messenger/worker/templates/worker.rb.erb
+++ b/lib/generators/messenger/worker/templates/worker.rb.erb
@@ -1,6 +1,6 @@
 class Messenger
   module Workers
-    class <%= class_name %>Worker
+    class <%= class_name %>
       include Messenger::Workers
 
       class << self
